--- a/src/index.template.html
+++ b/src/index.template.html
@@ -11,9 +11,47 @@
       content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width<% if (ctx.mode.cordova || ctx.mode.capacitor) { %>, viewport-fit=cover<% } %>"
     />
 
-    <link rel="apple-touch-icon" sizes="180x180" href="icons/apple-touch-icon.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png" />
-    <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png" />
+    <meta
+      name="description"
+      content="A website for tweeting 'Emoting Mokou' memes"
+    />
+
+    <!-- OpenGraph -->
+    <meta property="og:url" content="https://www.emotingmokou.moe/" />
+    <meta property="og:title" content="Emoting Mokou" />
+    <meta
+      property="og:description"
+      content="A website for tweeting 'Emoting Mokou' memes"
+    />
+    <meta property="og:site_name" content="Example" />
+    <meta
+      property="og:image"
+      content="https://www.emotingmokou.moe/images/padoru.jpg"
+    />
+    <meta property="og:type" content="website" />
+    <meta property="og:locale" content="en_US" />
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:creator" content="@MirakurunDev" />
+
+    <link
+      rel="apple-touch-icon"
+      sizes="180x180"
+      href="icons/apple-touch-icon.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="32x32"
+      href="icons/favicon-32x32.png"
+    />
+    <link
+      rel="icon"
+      type="image/png"
+      sizes="16x16"
+      href="icons/favicon-16x16.png"
+    />
     <link rel="manifest" href="icons/site.webmanifest" />
   </head>
   <body>
