Update meta tag

--- a/src/index.template.html
+++ b/src/index.template.html
@@ -23,7 +23,7 @@
       property="og:description"
       content="A website for tweeting 'Emoting Mokou' memes"
     />
-    <meta property="og:site_name" content="Example" />
+    <meta property="og:site_name" content="Emoting Mokou" />
     <meta
       property="og:image"
       content="https://www.emotingmokou.moe/images/padoru.jpg"
